- fix on hover text alignment on images

--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,15 @@ p {
     position: relative;
 }
 .image-container .after {
-    vertical-align: middle;
+    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: block;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     background: rgba(0, 0, 0, .6);
     opacity: 0;
     transition: .5s ease;
@@ -88,17 +90,14 @@ p {
 .image-container:hover .after {
     text-align: center;
     opacity:1;
-    display: block;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     background: rgba(0, 0, 0, .6);
 }
 
 .image-container p {
     text-align: center;
-    position: relative;
-    top: 35%;
-    -ms-transform: translateY(-35%);
-    -webkit-transform: translateY(-35%);
-    transform: translateY(-35%);
     font-family: dry_brush,Roboto;
     font-size: 35pt;
 }
